Updated CSS for the top portion of the homepage

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,49 @@
 :root {
   --primary-color: #c0e9f2;
   --accent-color: #5cc2f2;
+  --background-gradient: linear-gradient(
+    181.2deg,
+    rgb(181, 239, 249) 10.5%,
+    rgb(254, 254, 254) 86.8%
+  );
   --heading-font: "PT Serif", serif;
   --paragraph-font: "PT Sans", sans-serif;
 }
 
-body {
-  background-color: #f7f3f3;
+div.header {
+  background: var(--background-gradient);
+  padding: 150px 200px;
+  text-align: center;
+}
+
+.header h1,
+h3,
+h4 {
+  font-family: var(--heading-font);
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+.header h3 {
+  font-size: 40px;
+}
+
+.header h4 {
+  opacity: 0.7;
+}
+
+.header button {
+  background-color: var(--primary-color);
+  border: var(--accent-color);
+  margin-top: 45px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.header a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
 }
