--- a/styles/index.css
+++ b/styles/index.css
@@ -84,7 +84,7 @@ div.footer-container {
 }
 
 @media (max-width: 576px) {
-  .header {
+  div.header {
     padding: 75px 50px;
   }
 
@@ -102,5 +102,11 @@ div.footer-container {
 
   img {
     margin-top: 35px;
+  }
+
+  a i {
+    font-size: 10px;
+    padding: 20px;
+  }
   }
 }
