--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,10 @@ a {
   color: black;
 }
 
+a:hover {
+  color: black;
+}
+
 .header button,
 div .weather-app-description-btn {
   background-color: var(--primary-color);
